# simple_translator

./: Cargo.toml  README.md
src/: file_handler.rs  language.rs  main.rs  translator.rs
test/: test_eng_500.md  translation_test.rs
tests/: integration_tests.rs
