[package]
name = "md-translator"
version = "0.1.0"
edition = "2024"
authors = ["László Neukirchner <coding.groszber@gmail.com>"]
description = "A CLI for translating markdown files between English, Russian, and German"

[dependencies]
# Command-line argument parsing
clap = { version = "4.3.0", features = ["derive"] }
# Error handling
anyhow = "1.0.71"
# Language detection
lingua = "1.7.2"
